# C-Programme-Students

./: CMakeLists.txt  readme.md
Include/: Color.h  Date.h  EnterInfo.h  GPA.h  Login.h  LoginMenu.h  Manager.h  StuManager.h
src/: Color.cpp  Date.cpp  EnterInfo.cpp  GPA.cpp  Login.cpp  LoginMenu.cpp  Manager.cpp  StuManager.cpp  mian.cpp
